link chat button to chat page

--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -34,14 +34,6 @@
                     <i class="fa-solid fa-comments"></i>
                 </div>
 
-                <!--chat window-->
-                <div id="chatWindow">
-                    <div id="chatHeader">
-                        <span>Live Chat</span>
-                        <button id="closeChat">✖</button>
-                    </div>
-                    <iframe id="chatFrame" src=""></iframe>
-                </div>
                 
                 <!-- Right: User Button -->
                 <i class= "fa-solid fa-user" onclick="toggleMenu()"></i>
@@ -127,17 +119,10 @@
     }
 
     const chatBtn = document.getElementById("chatButton");
-    const chatWindow = document.getElementById("chatWindow");
-    const chatFrame = document.getElementById("chatFrame");
-    const closeBtn = document.getElementById("closeChat");
-
+   
     chatBtn.onclick = () => {
-      chatFrame.src = "http://localhost:8080"; //chat app
-      chatWindow.style.display = "flex";
+        // Open the chat login page in a new tab
+        window.open("http://localhost:/login", "_blank");
     };
 
-    closeBtn.onclick = () => {
-      chatFrame.src = ""; // unload
-      chatWindow.style.display = "none";
-    };
 </script>
