--- a/WongZhiYun/file/templates/base.html
+++ b/WongZhiYun/file/templates/base.html
@@ -8,6 +8,20 @@
         <title>Home</title>
     </head>
     <body>
+        <!-- Flash messages -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+                {% endfor %}
+            </div>
+            {% endif %}
+        {% endwith %}
+        <!-- End flash messages -->
+         
         <!--Navbar-->
         <header>
             <div>
