--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -11,8 +11,21 @@
     </head>
 
     <body>
-        <nav class="navbar">
+        <!-- Flash messages -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+                {% endfor %}
+            </div>
+            {% endif %}
+        {% endwith %}
+        <!-- End flash messages -->
 
+        <nav class="navbar">
             <div class="nav-left">
                 <!-- Left: Menu Button -->
                 <a href="{{ url_for('views.home') }}">
@@ -52,7 +65,7 @@
                         <i class='bx bxs-user-detail'></i>
                         <p>My Profile</p>
                     </a>
-                    <a href="/" class="acc-menu-link">
+                    <a href="{{ url_for('views.edit_profile') }}" class="acc-menu-link">
                         <i class='bx bxs-edit'></i>
                         <p>Edit Profile</p>
                     </a>
