--- a/WongZhiYun/file/templates/profile.html
+++ b/WongZhiYun/file/templates/profile.html
@@ -5,7 +5,7 @@
 <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
 
 <!-- Back button -->
-<a href="{{ url_for('views.profile') }}" class="back-link">
+<a href="{{ url_for('views.feed') }}" class="back-link">
     <i class='bx bx-chevrons-left'></i> Back
 </a>
 
