--- a/WongZhiYun/file/templates/report.html
+++ b/WongZhiYun/file/templates/report.html
@@ -1,14 +1,16 @@
+{% extends "base.html" %}
+{% block content %}
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Report Post</title>
+    <title>Upload Post</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='feed.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <h1>Report Lost/Found Item</h1>
+    <h1>Post Lost/Found Item</h1>
 
     <form action="{{ url_for('views.report_post') }}" method="POST" enctype="multipart/form-data" class="report-form">
 
@@ -37,3 +39,4 @@
     </form>
 </body>
 </html>
+{% endblock %}
