--- a/WongZhiYun/file/templates/sign_up.html
+++ b/WongZhiYun/file/templates/sign_up.html
@@ -8,6 +8,19 @@
     </head>
 
     <body>
+        <!-- Flash messages -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">
+                    {{ message }}
+                </div>
+                {% endfor %}
+            </div>
+            {% endif %}
+        {% endwith %}
+        <!-- End flash messages -->
         <div class="signup-box">
             <div class="form-box">
                 <form action="#" method="POST">
