--- a/WongZhiYun/file/templates/edit_profile.html
+++ b/WongZhiYun/file/templates/edit_profile.html
@@ -15,13 +15,14 @@
     <form action="{{ url_for('views.edit_profile') }}" method="POST" enctype="multipart/form-data">
         <!-- Profile Picture -->
         <div class="form-group">
-            {% if user.profile_image %}
-                <img src="{{ url_for('static', filename='profile_pics/' + user.profile_image) }}" 
-                     alt="Profile Picture" class="profile-img">
-            {% else %}
-                <span class="profile-placeholder">{{ user.username[0]|upper }}</span>
-            {% endif %}
-                <input type="file" name="profile_image" accept="image/*">
+            <div class="profile-img">
+                {% if user.profile_image and user.profile_image != 'default.png' %}
+                    <img src="{{ url_for('static', filename='profile_pics/' + user.profile_image) }}" >
+                {% else %}
+                    <span class="profile-placeholder">{{ user.username[0]|upper }}</span>
+                {% endif %}
+            </div>
+            <input type="file" name="profile_image" accept="image/*" >
         </div>
 
         <!-- Username -->
