--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -105,6 +105,11 @@
                     <div class="card-content">
                         <h3>{{ post.title }}</h3>
                         <p>{{ post.description }}</p>
+                        <p class="location">
+                        📍<a href="https://www.google.com/maps/search/{{ post.location | urlencode }}" target="_blank">
+                            {{ post.location }}
+                            </a>
+                        </p>
                         <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                         
                         {% if post.is_closed %}
