--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -25,7 +25,9 @@
                 <form class="search">
                     <input class="search-input" type="search" placeholder="Search">
                     <i class="fa-solid fa-magnifying-glass"></i>
-                    <i data-lucide="scan-search"></i>
+                    <a href="http://127.0.0.1:5000/search/">
+                        <i data-lucide="scan-search"></i>
+                    </a>
                 </form>
             </div>
 
