--- a/WongZhiYun/file/templates/profile.html
+++ b/WongZhiYun/file/templates/profile.html
@@ -35,7 +35,7 @@
 
     <!--User Posts-->
     <div class="profile-posts">
-        <h2>Your Posts</h2>
+        <h2>Posts</h2>
         {% for post in posts %}
             <div class="post-card">
                 {% if post.image %}
