--- a/WongZhiYun/file/templates/admin.html
+++ b/WongZhiYun/file/templates/admin.html
@@ -10,8 +10,14 @@
 <body>
 
 <!-- Header bar -->
-<div style="background-color: #918674; padding: 15px 0; text-align: center;">
+<div style="background-color: #918674; padding: 15px; display: flex; justify-content: space-between; align-items: center;">
+  <!-- Logo -->
   <img src="{{ url_for('static', filename='images/logo 1.png') }}" alt="logo" style="height:60px; width:auto;">
+
+  <!-- Logout Button -->
+  <a href="{{ url_for('auth.logout') }}" class="btn-logout">
+    <i class='bx bxs-log-out'></i> Logout
+  </a>
 </div>
 
 <div class="container py-4">
@@ -103,7 +109,6 @@
   </div>
 </div>
 
-
 <!-- Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
@@ -153,4 +158,3 @@
 
 </body>
 </html>
-
