--- a/WongZhiYun/file/templates/base.html
+++ b/WongZhiYun/file/templates/base.html
@@ -33,7 +33,7 @@
                     <ul class="links">
                         <li><a href="{{ url_for('views.home') }}">Home</a></li>
                         <li><a href="#about">About Us</a></li>
-                        <li><a href="/">Services</a></li>
+                        <li><a href="#Services">Services</a></li>
                         {% if current_user.is_authenticated %}
                         <!-- ONLY show if the user is logged in -->
                         <li><a href="{{ url_for('views.feed') }}">Post Board</a></li>
