--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -143,4 +143,13 @@
         window.open("http://localhost:/login", "_blank");
     };
 
+    setTimeout(() => {
+    const flashMessages = document.querySelector('.flash-messages');
+    if (flashMessages) {
+      flashMessages.style.transition = "opacity 0.5s ease";
+      flashMessages.style.opacity = "0";
+      setTimeout(() => flashMessages.remove(), 500); // remove after fade
+    }
+  }, 2000);
+  
 </script>
