--- a/WongZhiYun/file/static/feed.css
+++ b/WongZhiYun/file/static/feed.css
@@ -1,8 +1,8 @@
 
 body {
     background-color: #f4f1e8;
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
     color: #333;
 }
 
