--- a/WongZhiYun/file/templates/base.html
+++ b/WongZhiYun/file/templates/base.html
@@ -92,6 +92,15 @@
             function toggleMenu(){
                 accMenu.classList.toggle("open-menu");
             }
+
+            setTimeout(() => {
+            const flashMessages = document.querySelector('.flash-messages');
+            if (flashMessages) {
+                flashMessages.style.transition = "opacity 0.5s ease";
+                flashMessages.style.opacity = "0";
+                setTimeout(() => flashMessages.remove(), 500); // remove after fade
+                }
+            }, 2000);
         </script>
     </body>
 </html>
