--- a/WongZhiYun/file/templates/feed.html
+++ b/WongZhiYun/file/templates/feed.html
@@ -43,7 +43,7 @@
                     </a>
                 </form>
             </div>
-
+            <!--Chat button-->
             <div class="nav-right">
                 <div id="chatButton">
                     <i class="fa-solid fa-comments"></i>
