--- a/WongZhiYun/file/templates/login.html
+++ b/WongZhiYun/file/templates/login.html
@@ -22,7 +22,7 @@
               {% endif %}
             {% endwith %}
             <!-- End flash messages -->
-
+            <!--Login form-->
             <div class="form-box">
                 <form action="#" method="POST">
                     <h1>Login</h1>
