--- a/WongZhiYun/file/templates/post_detail.html
+++ b/WongZhiYun/file/templates/post_detail.html
@@ -17,7 +17,7 @@
     <small>Posted by {{ post.author.username }} on {{ post.date_posted.strftime('%Y-%m-%d') }}</small>
 
     <hr>
-
+    <!--Comment section-->
     <h3>Comments</h3>
     {% for c in comments %}
     <div class="comment">
