--- a/WongZhiYun/file/templates/report.html
+++ b/WongZhiYun/file/templates/report.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <h1>Post Lost/Found Item</h1>
-
+    <h1>Post Lost/Found Item</h1> 
+    <!--Post item form-->
     <form action="{{ url_for('views.report_post') }}" method="POST" enctype="multipart/form-data" class="report-form">
 
         <label for="title">Title</label>
