--- a/WongZhiYun/file/templates/sign_up.html
+++ b/WongZhiYun/file/templates/sign_up.html
@@ -20,7 +20,7 @@
             </div>
             {% endif %}
         {% endwith %}
-        <!-- End flash messages -->
+        <!-- SignUp form -->
         <div class="signup-box">
             <div class="form-box">
                 <form action="#" method="POST">
@@ -52,7 +52,7 @@
                 </form>
             </div>
         </div>
-
+        <!--Otp Popup-->
         {% if show_otp %}
         <div id="otpPopup" style="position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.6);display:flex;justify-content:center;align-items:center;z-index:9999;">
             <div style="width:350px; background:white; border-radius:10px; position:relative; padding:40px 20px 20px 20px;">
